Changes to webpack

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <button>Home</button>
+                <button>Menu</button>
+                <button>About</button>
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        
+    </div>
 </body>
 </html>
