--- a/src/template.html
+++ b/src/template.html
@@ -3,20 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurant</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <button>Home</button>
-                <button>Menu</button>
-                <button>About</button>
-            </ul>
-        </nav>
-    </header>
-    <div id="content">
-        
+<body class="bg-light">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">My Restaurant</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
+  <div class="container mt-5">
+    <div class="text-center">
+      <h1 class="display-4">Welcome to Our Restaurant</h1>
+      <p class="lead">Serving delicious meals with a touch of love.</p>
+    </div>
+    <div class="text-center mt-4">
+      <img src="../images/restaurant.jpg" alt="Restaurant" class="img-fluid rounded shadow">
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
