--- a/src/template.html
+++ b/src/template.html
@@ -20,14 +20,8 @@
       </div>
     </div>
   </nav>
-  <div class="container mt-5">
-    <div class="text-center">
-      <h1 class="display-4">Welcome to Our Restaurant</h1>
-      <p class="lead">Serving delicious meals with a touch of love.</p>
-    </div>
-    <div class="text-center mt-4">
-      <img src="../images/restaurant.jpg" alt="Restaurant" class="img-fluid rounded shadow">
-    </div>
+  <div id="content" class="container mt-5">
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
