--- a/src/template.html
+++ b/src/template.html
@@ -13,9 +13,9 @@
       <a class="navbar-brand" href="#">My Restaurant</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a id="homeBtn" class="nav-link active" href="#">Home</a></li>
+          <li class="nav-item"><a id="menuBtn" class="nav-link" href="#">Menu</a></li>
+          <li class="nav-item"><a id="aboutBtn" class="nav-link" href="#">About</a></li>
         </ul>
       </div>
     </div>
