Use lipsum for description

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 <body class="bg-light">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">My Restaurant</a>
+      <a class="navbar-brand" href="#">Restaurant</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a id="homeBtn" class="nav-link active" href="#">Home</a></li>
